[package]
name = "iron-toy"
version = "0.1.0"
authors = ["Rasmus Kaj <kaj@kth.se>"]
description = "Trying out webapp development in rust with iron"
repository = "https://github.com/kaj/iron-toy"
license = "MIT"

[dependencies]
iron = "*"
router = "*"
handlebars-iron = "*"
rustc-serialize = "^0.3.15"

[dependencies.logger]
git = "https://github.com/iron/logger.git"
